--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="aipetri.css" type="text/css"/>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+	<title>Ай-петри</title>
+<body>
+<h1>Ай-петри</h1>
+<div class="t">
+<img src="https://cdn.pixabay.com/photo/2018/05/25/00/45/crimea-3428092_1280.jpg">
+<img src="https://avatars.mds.yandex.net/get-zen_doc/3693937/pub_5f5480a5c84c033ffd7570a6_5fc861126bcad04cbc7a48c3/scale_1200">
+<img src="https://im0-tub-ru.yandex.net/i?id=0c382ca40dcfc633aa81281842d05682-l&ref=rim&n=13&w=640&h=640">
+</div>
+<p>Это живописная вершина в составе массива Ай-Петринская яйла, её высота достигает 1234 метров! Название имеет греческое происхождение и переводится как "Святой Пётр".Ай-Петри разделена на 3 зоны Главная её высота достигает 1234 метра, Западную и Восточную их высота 1100 метров.</p>
+	<a href="file:///C:/Users/andre/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/%D1%81%D0%B0%D0%B9%D1%82/yalta.html">Назад</a>
+</body>
+</html>
