--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <img src="https://im0-tub-ru.yandex.net/i?id=0c382ca40dcfc633aa81281842d05682-l&ref=rim&n=13&w=640&h=640">
 </div>
 <p>Это живописная вершина в составе массива Ай-Петринская яйла, её высота достигает 1234 метров! Название имеет греческое происхождение и переводится как "Святой Пётр".Ай-Петри разделена на 3 зоны Главная её высота достигает 1234 метра, Западную и Восточную их высота 1100 метров.</p>
-	<a href="file:///C:/Users/andre/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/%D1%81%D0%B0%D0%B9%D1%82/yalta.html">Назад</a>
+	<a href="https://mxmknn.github.io/ipetri.club/">Назад</a>
 </body>
 </html>
